--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="./favicon.png">
   </head>
   <body>
+
     <header>
       <div>
         <span>Techium</span>
@@ -19,11 +20,130 @@
     <main>
       <div>
         <h1>Homepage</h1>
+
+        <!-- Hero section -->
+        <section>
+          <div>
+            <h2>We help you build your brand!</h2>
+          </div>
+        </section>
+
+        <!-- Services section -->
+        <section>
+          <div>
+            <h2>Services</h2>
+            <p>We work with you</p>
+
+            <h3>Design & Concept</h3>
+            <h3>Digital Strategy</h3>
+            <h3>Content Strategy</h3>
+            <h3>UX Design</h3>
+            <h3>Web Development</h3>
+            <h3>Social Media</h3>
+          </div>
+        </section>
+
+        <!-- Works section -->
+        <section>
+          <div>
+            <h2>Works</h2>
+            <p>Take a look in our portfolio</p>
+
+            <article>
+              <div>
+                <h3>Interior Design</h3>
+              </div>
+            </article>
+
+            <article>
+              <div>
+                <h3>Web Development</h3>
+              </div>
+            </article>
+
+            <article>
+              <div>
+                <h3>Personal Brand</h3>
+              </div>
+            </article>
+          </div>
+        </section>
+
+        <!-- About Us section -->
+        <section>
+          <div>
+            <h2>About Us</h2>
+            <p>Everything about us</p>
+
+            <h3>Who are we</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+
+            <h3>Our culture</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+
+            <h3>How we work</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+          </div>
+        </section>
+
+        <!-- Latest news section -->
+        <section>
+          <div>
+            <h2>Latest news</h2>
+
+            <article>
+              <div>
+                <p>Career</p>
+                <h3>Hoc loco tenere se Triarius non potuit.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+              </div>
+            </article>
+
+            <article>
+              <div>
+                <p>Digital Life</p>
+                <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
+              </div>
+            </article>
+
+            <article>
+              <div>
+                <p>Social</p>
+                <h3>Bestiarum vero nullum iudicium puto.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis.</p>
+              </div>
+            </article>
+          </div>
+        </section>
+
+        <!-- Testimonials section -->
+        <section>
+          <div>
+            <h2>Testimonials</h2>
+            <p>We are more than a digital company</p>
+
+            <article><div>Testimonial 1</div></article>
+            <article><div>Testimonial 2</div></article>
+            <article><div>Testimonial 3</div></article>
+          </div>
+        </section>
+
+        <!-- Contact section -->
+        <section>
+          <div>
+            <h2>Contact</h2>
+            <p>We like to know new people</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+          </div>
+        </section>
+
       </div>
     </main>
 
     <footer>
       <div>Footer</div>
     </footer>
+
   </body>
 </html>
