Fix works section div structure

--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -21,14 +21,14 @@
       <div>
         <h1>Homepage</h1>
 
-        <!-- Hero section -->
+        <!-- Hero -->
         <section>
           <div>
             <h2>We help you build your brand!</h2>
           </div>
         </section>
 
-        <!-- Services section -->
+        <!-- Services -->
         <section>
           <div>
             <h2>Services</h2>
@@ -43,33 +43,27 @@
           </div>
         </section>
 
-        <!-- Works section -->
+        <!-- Works (المهم) -->
         <section>
           <div>
             <h2>Works</h2>
             <p>Take a look in our portfolio</p>
 
             <article>
-              <div>
-                <h3>Interior Design</h3>
-              </div>
+              <h3>Interior Design</h3>
             </article>
 
             <article>
-              <div>
-                <h3>Web Development</h3>
-              </div>
+              <h3>Web Development</h3>
             </article>
 
             <article>
-              <div>
-                <h3>Personal Brand</h3>
-              </div>
+              <h3>Personal Brand</h3>
             </article>
           </div>
         </section>
 
-        <!-- About Us section -->
+        <!-- About Us -->
         <section>
           <div>
             <h2>About Us</h2>
@@ -86,55 +80,49 @@
           </div>
         </section>
 
-        <!-- Latest news section -->
+        <!-- Latest News -->
         <section>
           <div>
             <h2>Latest news</h2>
 
             <article>
-              <div>
-                <p>Career</p>
-                <h3>Hoc loco tenere se Triarius non potuit.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-              </div>
+              <p>Career</p>
+              <h3>Hoc loco tenere se Triarius non potuit.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </article>
 
             <article>
-              <div>
-                <p>Digital Life</p>
-                <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-              </div>
+              <p>Digital Life</p>
+              <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </article>
 
             <article>
-              <div>
-                <p>Social</p>
-                <h3>Bestiarum vero nullum iudicium puto.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis.</p>
-              </div>
+              <p>Social</p>
+              <h3>Bestiarum vero nullum iudicium puto.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </article>
           </div>
         </section>
 
-        <!-- Testimonials section -->
+        <!-- Testimonials -->
         <section>
           <div>
             <h2>Testimonials</h2>
             <p>We are more than a digital company</p>
 
-            <article><div>Testimonial 1</div></article>
-            <article><div>Testimonial 2</div></article>
-            <article><div>Testimonial 3</div></article>
+            <article>Testimonial 1</article>
+            <article>Testimonial 2</article>
+            <article>Testimonial 3</article>
           </div>
         </section>
 
-        <!-- Contact section -->
+        <!-- Contact -->
         <section>
           <div>
             <h2>Contact</h2>
             <p>We like to know new people</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </section>
 
