--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -12,7 +12,9 @@
 
     <header>
       <div>
-        <span>Techium</span>
+        <div>
+          <a href="/"><span>Techium</span></a>
+        </div>
         <nav></nav>
       </div>
     </header>
@@ -21,12 +23,14 @@
       <div>
         <h1>Homepage</h1>
 
+        <!-- Hero section -->
         <section>
           <div>
             <h2>We help you build your brand!</h2>
           </div>
         </section>
 
+        <!-- Services section -->
         <section>
           <div>
             <header>
@@ -44,6 +48,7 @@
           </div>
         </section>
 
+        <!-- Works section -->
         <section>
           <div>
             <header>
@@ -51,13 +56,20 @@
               <p>Take a look in our portfolio</p>
             </header>
             <div>
-              <article><h3>Interior Design</h3></article>
-              <article><h3>Web Development</h3></article>
-              <article><h3>Personal Brand</h3></article>
+              <article>
+                <h3>Interior Design</h3>
+              </article>
+              <article>
+                <h3>Web Development</h3>
+              </article>
+              <article>
+                <h3>Personal Brand</h3>
+              </article>
             </div>
           </div>
         </section>
 
+        <!-- About Us section -->
         <section>
           <div>
             <header>
@@ -66,37 +78,47 @@
             </header>
             <div>
               <h3>Who are we</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+
               <h3>Our culture</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+
               <h3>How we work</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
             </div>
           </div>
         </section>
 
+        <!-- Latest news section -->
         <section>
           <div>
             <header>
               <h2>Latest news</h2>
             </header>
+
             <div>
               <article>
-                <p>Career</p>
                 <h3>Hoc loco tenere se Triarius non potuit.</h3>
+                <p>Career</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
               </article>
+
               <article>
+                <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
                 <p>Digital Life</p>
-                <h3>Ut alios omittam, hunc appello.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
               </article>
+
               <article>
-                <p>Social</p>
                 <h3>Bestiarum vero nullum iudicium puto.</h3>
+                <p>Social</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
               </article>
             </div>
           </div>
         </section>
 
+        <!-- Testimonials section -->
         <section>
           <div>
             <header>
@@ -111,6 +133,7 @@
           </div>
         </section>
 
+        <!-- Contact section -->
         <section>
           <div>
             <header>
@@ -118,7 +141,7 @@
               <p>We like to know new people</p>
             </header>
             <div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
             </div>
           </div>
         </section>
@@ -132,3 +155,4 @@
 
   </body>
 </html>
+
