--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -1,17 +1,92 @@
-<article>
-  <blockquote cite="Yuri Y.">
-    I am completely blown away. Thanks to Techium, we've just launched our 5th website!
-  </blockquote>
-</article>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Homepage - Techium</title>
+  </head>
+  <body>
 
-<article>
-  <blockquote cite="Dorrie S.">
-    Thank you so much for your help. Techium company is awesome!
-  </blockquote>
-</article>
+    <!-- Header -->
+    <header>
+      <div>
+        <div>
+          <a href="/"><span>Techium</span></a>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#works">Works</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#latest_news">Latest news</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-<article>
-  <blockquote cite="Sven H.">
-    I love your system. Definitely worth the investment. I'd be lost without Techium company.
-  </blockquote>
-</article>
+    <!-- Main -->
+    <main>
+
+      <!-- Hero section -->
+      <section>
+        <div>
+          <header>
+            <h1>Homepage</h1>
+          </header>
+        </div>
+      </section>
+
+      <!-- Testimonials section -->
+      <section>
+        <div>
+          <header>
+            <h2>Testimonials</h2>
+            <p>We are more than a digital company</p>
+          </header>
+
+          <div>
+            <article>
+              <blockquote>
+                I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+                <cite>Yuri Y.</cite>
+              </blockquote>
+            </article>
+
+            <article>
+              <blockquote>
+                Thank you so much for your help. Techium company is awesome!
+                <cite>Dorrie S.</cite>
+              </blockquote>
+            </article>
+
+            <article>
+              <blockquote>
+                I love your system. Definitely worth the investment. I'd be lost without Techium company.
+                <cite>Sven H.</cite>
+              </blockquote>
+            </article>
+          </div>
+        </div>
+      </section>
+
+    </main>
+
+    <!-- Footer -->
+    <footer>
+      <div>
+        <ul>
+          <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+          <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+          <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+        </ul>
+      </div>
+      <hr>
+      <div>
+        <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
+      </div>
+    </footer>
+
+  </body>
+</html>
