--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -38,6 +38,45 @@
         </div>
       </section>
 
+      <!-- Services section -->
+      <section>
+        <div>
+          <header>
+            <h2>Services</h2>
+            <p>We work with you</p>
+          </header>
+          <div>
+            <h3><a href="#">Design &amp; Concept</a></h3>
+            <h3><a href="#">Digital Strategy</a></h3>
+            <h3><a href="#">Content Strategy</a></h3>
+            <h3><a href="#">UX Design</a></h3>
+            <h3><a href="#">Web Development</a></h3>
+            <h3><a href="#">Social Media</a></h3>
+          </div>
+        </div>
+      </section>
+
+      <!-- Works section -->
+      <section>
+        <div>
+          <header>
+            <h2>Works</h2>
+            <p>Take a look in our portfolio</p>
+          </header>
+          <div>
+            <article>
+              <h3><a href="#">Interior Design</a></h3>
+            </article>
+            <article>
+              <h3><a href="#">Web Development</a></h3>
+            </article>
+            <article>
+              <h3><a href="#">Personal Brand</a></h3>
+            </article>
+          </div>
+        </div>
+      </section>
+
       <!-- Testimonials section -->
       <section>
         <div>
@@ -50,23 +89,40 @@
             <article>
               <blockquote>
                 I am completely blown away. Thanks to Techium, we've just launched our 5th website!
-                <cite>Yuri Y.</cite>
               </blockquote>
+              <cite>Yuri Y.</cite>
             </article>
 
             <article>
               <blockquote>
                 Thank you so much for your help. Techium company is awesome!
-                <cite>Dorrie S.</cite>
               </blockquote>
+              <cite>Dorrie S.</cite>
             </article>
 
             <article>
               <blockquote>
                 I love your system. Definitely worth the investment. I'd be lost without Techium company.
-                <cite>Sven H.</cite>
               </blockquote>
+              <cite>Sven H.</cite>
             </article>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact section -->
+      <section>
+        <div>
+          <header>
+            <h2>Contact</h2>
+            <p>We like to know new people</p>
+          </header>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius
+              factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria
+              sunt his, malane?
+            </p>
           </div>
         </div>
       </section>
@@ -82,7 +138,9 @@
           <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
         </ul>
       </div>
+
       <hr>
+
       <div>
         <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
       </div>
