--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -29,6 +29,104 @@
     <!-- Main -->
     <main>
 
+      <!-- Hero section -->
+      <section>
+        <div>
+          <header>
+            <h1>Homepage</h1>
+          </header>
+          <div>
+            <a href="#">Get started</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Services section -->
+      <section>
+        <div>
+          <header>
+            <h2>Services</h2>
+            <p>We work with you</p>
+          </header>
+          <div>
+            <h3><a href="#">Design &amp; Concept</a></h3>
+            <h3><a href="#">Digital Strategy</a></h3>
+            <h3><a href="#">Content Strategy</a></h3>
+            <h3><a href="#">UX Design</a></h3>
+            <h3><a href="#">Web Development</a></h3>
+            <h3><a href="#">Social Media</a></h3>
+          </div>
+        </div>
+      </section>
+
+      <!-- Works section -->
+      <section>
+        <div>
+          <header>
+            <h2>Works</h2>
+            <p>Take a look in our portfolio</p>
+          </header>
+          <div>
+            <article>
+              <h3><a href="#">Interior Design</a></h3>
+            </article>
+            <article>
+              <h3><a href="#">Web Development</a></h3>
+            </article>
+            <article>
+              <h3><a href="#">Personal Brand</a></h3>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <!-- About Us section -->
+      <section>
+        <div>
+          <header>
+            <h2>About Us</h2>
+            <p>Everything about us</p>
+          </header>
+          <div>
+            <h3>Who are we</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+            <h3>Our culture</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+            <h3>How we work</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+            <a href="about.html">Learn more about us</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Latest news section -->
+      <section>
+        <div>
+          <header>
+            <h2>Latest news</h2>
+          </header>
+          <div>
+            <article>
+              <p>Career</p>
+              <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+            </article>
+
+            <article>
+              <p>Digital Life</p>
+              <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
+            </article>
+
+            <article>
+              <p>Social</p>
+              <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
+            </article>
+          </div>
+        </div>
+      </section>
+
       <!-- Testimonials section -->
       <section>
         <div>
@@ -36,7 +134,6 @@
             <h2>Testimonials</h2>
             <p>We are more than a digital company</p>
           </header>
-
           <div>
             <article>
               <blockquote>
@@ -58,6 +155,20 @@
               </blockquote>
               <cite>Sven H.</cite>
             </article>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact section -->
+      <section>
+        <div>
+          <header>
+            <h2>Contact</h2>
+            <p>We like to know new people</p>
+          </header>
+          <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="contact.html">Get in touch</a>
           </div>
         </div>
       </section>
