--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -67,15 +67,9 @@
             <p>Take a look in our portfolio</p>
           </header>
           <div>
-            <article>
-              <h3><a href="#">Interior Design</a></h3>
-            </article>
-            <article>
-              <h3><a href="#">Web Development</a></h3>
-            </article>
-            <article>
-              <h3><a href="#">Personal Brand</a></h3>
-            </article>
+            <article><h3><a href="#">Interior Design</a></h3></article>
+            <article><h3><a href="#">Web Development</a></h3></article>
+            <article><h3><a href="#">Personal Brand</a></h3></article>
           </div>
         </div>
       </section>
@@ -113,12 +107,10 @@
               <p>Career</p>
               <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
             </article>
-
             <article>
               <p>Digital Life</p>
               <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
             </article>
-
             <article>
               <p>Social</p>
               <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
@@ -136,23 +128,15 @@
           </header>
           <div>
             <article>
-              <blockquote>
-                I am completely blown away. Thanks to Techium, we've just launched our 5th website!
-              </blockquote>
+              <blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote>
               <cite>Yuri Y.</cite>
             </article>
-
             <article>
-              <blockquote>
-                Thank you so much for your help. Techium company is awesome!
-              </blockquote>
+              <blockquote>Thank you so much for your help. Techium company is awesome!</blockquote>
               <cite>Dorrie S.</cite>
             </article>
-
             <article>
-              <blockquote>
-                I love your system. Definitely worth the investment. I'd be lost without Techium company.
-              </blockquote>
+              <blockquote>I love your system. Definitely worth the investment. I'd be lost without Techium company.</blockquote>
               <cite>Sven H.</cite>
             </article>
           </div>
