--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -42,7 +42,7 @@
       </section>
 
       <!-- Services section -->
-      <section>
+      <section id="services">
         <div>
           <header>
             <h2>Services</h2>
@@ -60,7 +60,7 @@
       </section>
 
       <!-- Works section -->
-      <section>
+      <section id="works">
         <div>
           <header>
             <h2>Works</h2>
@@ -75,7 +75,7 @@
       </section>
 
       <!-- About Us section -->
-      <section>
+      <section id="about">
         <div>
           <header>
             <h2>About Us</h2>
@@ -97,7 +97,7 @@
       </section>
 
       <!-- Latest news section -->
-      <section>
+      <section id="latest_news">
         <div>
           <header>
             <h2>Latest news</h2>
@@ -120,7 +120,7 @@
       </section>
 
       <!-- Testimonials section -->
-      <section>
+      <section id="testimonials">
         <div>
           <header>
             <h2>Testimonials</h2>
@@ -144,7 +144,7 @@
       </section>
 
       <!-- Contact section -->
-      <section>
+      <section id="contact">
         <div>
           <header>
             <h2>Contact</h2>
