--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -6,7 +6,6 @@
   </head>
   <body>
 
-    <!-- Header -->
     <header>
       <div>
         <div>
@@ -26,56 +25,48 @@
       </div>
     </header>
 
-    <!-- Main -->
     <main>
 
-      <!-- Hero section -->
       <section>
         <div>
           <header>
             <h1>Homepage</h1>
           </header>
-          <div>
-            <a href="#">Get started</a>
-          </div>
         </div>
       </section>
 
-      <!-- Services section -->
-      <section id="services">
+      <section>
         <div>
           <header>
             <h2>Services</h2>
             <p>We work with you</p>
           </header>
           <div>
-            <h3><a href="#">Design &amp; Concept</a></h3>
-            <h3><a href="#">Digital Strategy</a></h3>
-            <h3><a href="#">Content Strategy</a></h3>
-            <h3><a href="#">UX Design</a></h3>
-            <h3><a href="#">Web Development</a></h3>
-            <h3><a href="#">Social Media</a></h3>
+            <h3>Design &amp; Concept</h3>
+            <h3>Digital Strategy</h3>
+            <h3>Content Strategy</h3>
+            <h3>UX Design</h3>
+            <h3>Web Development</h3>
+            <h3>Social Media</h3>
           </div>
         </div>
       </section>
 
-      <!-- Works section -->
-      <section id="works">
+      <section>
         <div>
           <header>
             <h2>Works</h2>
             <p>Take a look in our portfolio</p>
           </header>
           <div>
-            <article><h3><a href="#">Interior Design</a></h3></article>
-            <article><h3><a href="#">Web Development</a></h3></article>
-            <article><h3><a href="#">Personal Brand</a></h3></article>
+            <article>Work #1</article>
+            <article>Work #2</article>
+            <article>Work #3</article>
           </div>
         </div>
       </section>
 
-      <!-- About Us section -->
-      <section id="about">
+      <section>
         <div>
           <header>
             <h2>About Us</h2>
@@ -83,21 +74,16 @@
           </header>
           <div>
             <h3>Who are we</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-
+            <p>Lorem ipsum dolor sit amet.</p>
             <h3>Our culture</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-
+            <p>Lorem ipsum dolor sit amet.</p>
             <h3>How we work</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-
-            <a href="about.html">Learn more about us</a>
+            <p>Lorem ipsum dolor sit amet.</p>
           </div>
         </div>
       </section>
 
-      <!-- Latest news section -->
-      <section id="latest_news">
+      <section>
         <div>
           <header>
             <h2>Latest news</h2>
@@ -105,61 +91,68 @@
           <div>
             <article>
               <p>Career</p>
-              <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+              <h3>Hoc loco tenere se Triarius non potuit.</h3>
             </article>
             <article>
               <p>Digital Life</p>
-              <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
+              <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
             </article>
             <article>
               <p>Social</p>
-              <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
+              <h3>Bestiarum vero nullum iudicium puto.</h3>
             </article>
           </div>
         </div>
       </section>
 
-      <!-- Testimonials section -->
-      <section id="testimonials">
+      <!-- ✅ Testimonials section (التعديل الوحيد) -->
+      <section>
         <div>
           <header>
             <h2>Testimonials</h2>
             <p>We are more than a digital company</p>
           </header>
           <div>
+
             <article>
-              <blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote>
-              <cite>Yuri Y.</cite>
+              <blockquote>
+                I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+                <cite>Yuri Y.</cite>
+              </blockquote>
             </article>
+
             <article>
-              <blockquote>Thank you so much for your help. Techium company is awesome!</blockquote>
-              <cite>Dorrie S.</cite>
+              <blockquote>
+                Thank you so much for your help. Techium company is awesome!
+                <cite>Dorrie S.</cite>
+              </blockquote>
             </article>
+
             <article>
-              <blockquote>I love your system. Definitely worth the investment. I'd be lost without Techium company.</blockquote>
-              <cite>Sven H.</cite>
+              <blockquote>
+                I love your system. Definitely worth the investment. I'd be lost without Techium company.
+                <cite>Sven H.</cite>
+              </blockquote>
             </article>
+
           </div>
         </div>
       </section>
 
-      <!-- Contact section -->
-      <section id="contact">
+      <section>
         <div>
           <header>
             <h2>Contact</h2>
             <p>We like to know new people</p>
           </header>
           <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="contact.html">Get in touch</a>
+            <p>Lorem ipsum dolor sit amet.</p>
           </div>
         </div>
       </section>
 
     </main>
 
-    <!-- Footer -->
     <footer>
       <div>
         <ul>
