Task 29: client quotes

--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
 
+    <!-- Header -->
     <header>
       <div>
         <div>
@@ -25,8 +26,10 @@
       </div>
     </header>
 
+    <!-- Main -->
     <main>
 
+      <!-- Hero section -->
       <section>
         <div>
           <header>
@@ -35,6 +38,7 @@
         </div>
       </section>
 
+      <!-- Services section -->
       <section>
         <div>
           <header>
@@ -52,6 +56,7 @@
         </div>
       </section>
 
+      <!-- Works section -->
       <section>
         <div>
           <header>
@@ -66,6 +71,7 @@
         </div>
       </section>
 
+      <!-- About Us section -->
       <section>
         <div>
           <header>
@@ -83,6 +89,7 @@
         </div>
       </section>
 
+      <!-- Latest news section -->
       <section>
         <div>
           <header>
@@ -105,7 +112,7 @@
         </div>
       </section>
 
-      <!-- ✅ Testimonials section -->
+      <!-- Testimonials section -->
       <section>
         <div>
           <header>
@@ -113,13 +120,29 @@
             <p>We are more than a digital company</p>
           </header>
           <div>
-            <article><blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote><cite>Yuri Y.</cite></article>
-            <article><blockquote>Thank you so much for your help. Techium company is awesome!</blockquote><cite>Dorrie S.</cite></article>
-            <article><blockquote>I love your system. Definitely worth the investment. I'd be lost without Techium company.</blockquote><cite>Sven H.</cite></article>
+            <article>
+              <blockquote>
+                I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+              </blockquote>
+              <cite>Yuri Y.</cite>
+            </article>
+            <article>
+              <blockquote>
+                Thank you so much for your help. Techium company is awesome!
+              </blockquote>
+              <cite>Dorrie S.</cite>
+            </article>
+            <article>
+              <blockquote>
+                I love your system. Definitely worth the investment. I'd be lost without Techium company.
+              </blockquote>
+              <cite>Sven H.</cite>
+            </article>
           </div>
         </div>
       </section>
 
+      <!-- Contact section -->
       <section>
         <div>
           <header>
@@ -134,6 +157,7 @@
 
     </main>
 
+    <!-- Footer -->
     <footer>
       <div>
         <ul>
