Task 30: blockquotes examples

--- a/html_advanced/30-styleguide.html
+++ b/html_advanced/30-styleguide.html
@@ -10,6 +10,7 @@
 
     <main>
 
+      <!-- Headings -->
       <section>
         <header>
           <h2>Headings</h2>
@@ -22,6 +23,7 @@
         <h6>Heading level 6</h6>
       </section>
 
+      <!-- Paragraph -->
       <section>
         <header>
           <h2>Paragraph</h2>
@@ -100,11 +102,13 @@
         <div>
           <h3>Blockquote</h3>
           <blockquote>
-            I will be the leader of a company that ends up being worth billions of
-            dollars, because I got the answers. I understand culture. I am the
-            nucleus. I think that’s a responsibility that I have, to push
-            possibilities, to show people, this is the level that things could be
-            at.
+            <p>
+              I will be the leader of a company that ends up being worth billions of
+              dollars, because I got the answers. I understand culture. I am the
+              nucleus. I think that’s a responsibility that I have, to push
+              possibilities, to show people, this is the level that things could be
+              at.
+            </p>
           </blockquote>
           <cite>Kanye West, Musician</cite>
         </div>
