--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -10,7 +10,6 @@
   </head>
   <body>
 
-    <!-- Header -->
     <header>
       <div>
         <div>
@@ -30,11 +29,9 @@
       </div>
     </header>
 
-    <!-- Main -->
     <main>
       <h1>Homepage</h1>
 
-      <!-- Hero -->
       <section>
         <div>
           <h2>We help you build your brand!</h2>
@@ -42,85 +39,15 @@
         </div>
       </section>
 
-      <!-- Services -->
       <section id="services">
         <div>
           <header>
             <h2>Services</h2>
             <p>We work with you</p>
           </header>
-          <div>
-            <h3><a href="#">Design & Concept</a></h3>
-            <h3><a href="#">Digital Strategy</a></h3>
-            <h3><a href="#">Content Strategy</a></h3>
-            <h3><a href="#">UX Design</a></h3>
-            <h3><a href="#">Web Development</a></h3>
-            <h3><a href="#">Social Media</a></h3>
-          </div>
         </div>
       </section>
 
-      <!-- Works -->
-      <section id="works">
-        <div>
-          <header>
-            <h2>Works</h2>
-            <p>Take a look in our portfolio</p>
-          </header>
-          <div>
-            <article><h3><a href="#">Interior Design</a></h3></article>
-            <article><h3><a href="#">Web Development</a></h3></article>
-            <article><h3><a href="#">Personal Brand</a></h3></article>
-          </div>
-        </div>
-      </section>
-
-      <!-- About -->
-      <section id="about">
-        <div>
-          <header>
-            <h2>About Us</h2>
-            <p>Everything about us</p>
-          </header>
-          <div>
-            <h3>Who are we</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <h3>Our culture</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <h3>How we work</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-          </div>
-          <a href="about.html">Learn more about us</a>
-        </div>
-      </section>
-
-      <!-- Latest news -->
-      <section id="latest_news">
-        <div>
-          <header>
-            <h2>Latest news</h2>
-          </header>
-          <div>
-            <article>
-              <p>Career</p>
-              <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
-              <p>Lorem ipsum dolor sit amet.</p>
-            </article>
-            <article>
-              <p>Digital Life</p>
-              <h3><a href="#">Ut alios omittam, hunc appello.</a></h3>
-              <p>Lorem ipsum dolor sit amet.</p>
-            </article>
-            <article>
-              <p>Social</p>
-              <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
-              <p>Lorem ipsum dolor sit amet.</p>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <!-- Testimonials (✔ FINAL FIX) -->
       <section id="testimonials">
         <div>
           <header>
@@ -129,53 +56,40 @@
           </header>
           <div>
             <article>
-              <blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website! <cite>Yuri Y.</cite></blockquote>
+              <blockquote>
+                <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
+                <cite>Yuri Y.</cite>
+              </blockquote>
             </article>
             <article>
-              <blockquote>Thank you so much for your help. Techium company is awesome! <cite>Dorrie S.</cite></blockquote>
+              <blockquote>
+                <p>Thank you so much for your help. Techium company is awesome!</p>
+                <cite>Dorrie S.</cite>
+              </blockquote>
             </article>
             <article>
-              <blockquote>I love your system. Definitely worth the investment. I'd be lost without Techium company. <cite>Sven H.</cite></blockquote>
+              <blockquote>
+                <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
+                <cite>Sven H.</cite>
+              </blockquote>
             </article>
           </div>
         </div>
       </section>
 
-      <!-- Contact -->
       <section id="contact">
         <div>
           <header>
             <h2>Contact</h2>
             <p>We like to know new people</p>
           </header>
-          <div>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-          <a href="contact.html">Get in touch</a>
         </div>
       </section>
 
-      <aside>Aside</aside>
     </main>
 
-    <!-- Footer -->
     <footer>
-      <div>
-        <ul>
-          <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
-          <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-          <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
-        </ul>
-      </div>
-      <hr>
       <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
-      <div>
-        <ul>
-          <li><a href="#">Terms of Use</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Cookie Policy</a></li>
-        </ul>
-      </div>
     </footer>
 
   </body>
