--- a/CSS_advanced/index.html
+++ b/CSS_advanced/index.html
@@ -1,2 +1,3 @@
 <link rel="stylesheet" href="styles/1-style.css">
 <link rel="stylesheet" href="styles/2-style.css">
+<link rel="stylesheet" href="styles/3-style.css">
